crates/normalize-cfg/tests/snapshots/go_cfg__go_early_return.snap
---
source: crates/normalize-cfg/tests/go_cfg.rs
assertion_line: 112
expression: mermaid
---
flowchart TD
    b0{"Branch<br/>lines 1-4"}
    b1(["exit"])
    b2["Statement<br/>lines 4-6"]
    b3{"Branch<br/>lines 6-7"}
    b4["Statement<br/>lines 7-9"]
    b5["Statement<br/>lines 9-10"]

    b0 -->|"true"| b2
    b0 -->|"false"| b3
    b2 --> b3
    b3 -->|"true"| b4
    b3 -->|"false"| b5
    b4 --> b5
    b5 -->|"return"| b1
