crates/normalize-cfg/tests/snapshots/go_cfg__go_linear.snap
---
source: crates/normalize-cfg/tests/go_cfg.rs
assertion_line: 94
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])

    b0 -->|"return"| b1
