crates/normalize-cfg/tests/snapshots/go_cfg__go_loop.snap
---
source: crates/normalize-cfg/tests/go_cfg.rs
assertion_line: 106
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])
    b2{"LoopHead<br/>line 5"}
    b3["LoopExit<br/>lines 10-11"]
    b4["LoopBody<br/>lines 5-10"]

    b0 --> b2
    b2 -->|"true"| b4
    b2 -->|"false"| b3
    b4 -->|"back"| b2
    b3 -->|"return"| b1
